[package]
name = "agent-mapping"
version = "0.1.0"
authors = ["Sebastian Mobo <smobo@vols.utk.edu>", "Clark Hathaway <chathawa@vols.utk.edu>"]
edition = "2018"
repository = "https://github.com/TauferLab/UrbanTrafficFramework_20"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rayon = "1.3"
once_cell = "1.4"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"